Initialization is much faster now due to sending openai requests in batch for summarization and extraction. This way, the RDB file is not necessary anymore.